--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -54,6 +54,12 @@ add_executable(sick_tim551_2050001
     src/sick_tim551_2050001_parser.cpp)
 target_link_libraries(sick_tim551_2050001 sick_tim_3xx)
 
+add_executable(sick_mrs_1000
+    src/sick_mrs1000.cpp
+    src/sick_tim_common_tcp.cpp
+    src/sick_mrs1000_parser.cpp)
+target_link_libraries(sick_mrs_1000 sick_tim_3xx)
+
 add_executable(sick_tim_datagram_test
     test/sick_tim_datagram_test.cpp
     src/sick_tim310s01_parser.cpp
